Refactor: replace generic exceptions with specific JPA exceptions and eliminate duplicated string literals in TransactionService